Fixed name user

--- a/engines/campusero/app/views/campusero/welcome/index.html.erb
+++ b/engines/campusero/app/views/campusero/welcome/index.html.erb
@@ -50,7 +50,7 @@
 </style>
 
 <div class="box success">
-    <p class="title">Olá, <%= @user['name']%></p>
+    <p class="title">Olá, <%= @user['first_name']%></p>
     <img class="logo" src="https://accounts.campuse.ro/public/images/Campuseros_logo.png" alt="">
     <a class="btn btn-block" href="campuseiroapp://index?at=123abc">Prosseguir para plataforma</a>
 </div>
