Fixed name user

--- a/engines/campusero/app/views/campusero/welcome/index.html.erb
+++ b/engines/campusero/app/views/campusero/welcome/index.html.erb
@@ -52,6 +52,6 @@
 <div class="box success">
     <p class="title">Olá, <%= @user['first_name']%></p>
     <img class="logo" src="https://accounts.campuse.ro/public/images/Campuseros_logo.png" alt="">
-    <a class="btn btn-block" href="campuseiroapp://index?at=123abc">Prosseguir para plataforma</a>
-</div>
+    <a class="btn btn-block" href="campuseiroapp://index?at=<%=@token%>">Prosseguir para plataforma</a>
+</div>S
 
