--- a/engines/campusero/app/views/campusero/welcome/index.html.erb
+++ b/engines/campusero/app/views/campusero/welcome/index.html.erb
@@ -53,5 +53,5 @@
     <p class="title">Olá, <%= @user['first_name']%></p>
     <img class="logo" src="https://accounts.campuse.ro/public/images/Campuseros_logo.png" alt="">
     <a class="btn btn-block" href="campuseiroapp://index?at=<%=@token%>&rt=<%=@refresh_token%>">Prosseguir para plataforma</a>
-</div>S
+</div>
 
