--- a/engines/campusero/app/views/campusero/welcome/index.html.erb
+++ b/engines/campusero/app/views/campusero/welcome/index.html.erb
@@ -67,7 +67,7 @@
                 <p class="title">Olá, <%= @user['first_name']%></p>
             <% end %>
             <img class="logo" src="https://accounts.campuse.ro/public/images/Campuseros_logo.png" alt="">
-            <a class="btn btn-block" href="campuspartyapp://token/<%=@token%>:<%=@refresh_token%>">Prosseguir para plataforma</a>
+            <a class="btn btn-block" href="campuspartyapp://token/<%=@token%>:<%=@refresh_token%>">Voltar para o aplicativo</a>
         </div>
     
     
